--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL='https://yann-gueguenrestaurantapp.herokuapp.com/'
+NEXT_PUBLIC_API_URL='https://secure-lake-61114.herokuapp.com/'
